--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
+    "module": "ES6",
     "target": "esnext",
     "types": [],
     // For nodejs:
